<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.sin.projectone.RegisterStoreActivity">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/register_store_store_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_store_store_name" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/register_store_store_pass"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:hint="@string/register_store_store_pass" />

    </android.support.design.widget.TextInputLayout>

    <RadioGroup
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/register_store_radio">

        <RadioButton
            android:text="@string/register_store_radio_owner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/register_store_radio_owner"
            android:layout_weight="1"/>

        <RadioButton
            android:text="@string/register_store_radio_emp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/register_store_radio_emp"
            android:layout_weight="1"/>
    </RadioGroup>

    <Button
        android:layout_marginTop="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_gravity="center"
        android:text="@string/register_store_button_register_store"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:id="@+id/register_store_store_button"
        android:textSize="14sp"
        android:fontFamily="sans-serif-medium" />

</LinearLayout>
