<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:scaleType="center"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:maxHeight="300dp"
                app:srcCompat="@drawable/ic_menu_gallery"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_margin="20dp"
                android:id="@+id/img_product" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5">


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <TextView
                android:text="@string/label_product_name"
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:layout_weight="0.3"
                android:layout_margin="10dp"/>

            <TextView
                android:text="TextView"
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:id="@+id/text_product_name"
                android:layout_weight="0.7"
                android:layout_margin="10dp"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <TextView
                android:text="@string/label_product_barcode"
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:layout_weight="0.3"
                android:layout_margin="10dp"/>

            <TextView
                android:text="TextView"
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:id="@+id/text_product_barcode"
                android:layout_weight="0.7"
                android:layout_margin="10dp"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <TextView
                android:text="@string/label_product_price"
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:layout_weight="0.3"
                android:layout_margin="10dp"/>

            <TextView
                android:text="TextView"
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:id="@+id/text_product_price"
                android:layout_weight="0.7"
                android:layout_margin="10dp"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <TextView
                android:text="@string/label_product_qty"
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:layout_weight="0.3"
                android:layout_margin="10dp"/>

            <TextView
                android:text="TextView"
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:id="@+id/text_product_qty"
                android:layout_weight="0.7"
                android:layout_margin="10dp"/>
        </LinearLayout>
        <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">

            <TextView
            android:text="@string/label_product_type"
            android:layout_width="0dp"
            android:layout_height="20dp"
                android:layout_weight="0.3"
            android:layout_margin="10dp"/>

            <TextView
            android:text="TextView"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:id="@+id/text_product_type"
            android:layout_weight="0.7"
            android:layout_margin="10dp"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <TextView
                android:text="@string/label_product_cost"
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:layout_weight="0.3"
                android:layout_margin="10dp"/>

            <TextView
                android:text="TextView"
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:id="@+id/text_product_cost"
                android:layout_weight="0.7"
                android:layout_margin="10dp"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <TextView
                android:text="@string/label_product_details"
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:layout_weight="0.3"
                android:layout_margin="10dp"/>

            <TextView
                android:text="TextView"
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:id="@+id/text_product_details"
                android:layout_weight="0.7"
                android:layout_margin="10dp"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:text="@string/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="23dp"
                android:id="@+id/btn_cancel"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="46dp" />

            <Button
                android:text="@string/btn_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_edit"
                android:layout_alignBaseline="@+id/btn_cancel"
                android:layout_alignBottom="@+id/btn_cancel"
                android:layout_alignParentStart="true"
                android:layout_marginStart="60dp" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>